[gd_scene load_steps=3 format=3 uid="uid://xtem1ehqoygg"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_ep7au"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r38wx"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ep7au")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r38wx")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 144.0
offset_top = 128.0
offset_right = 234.0
offset_bottom = 264.0

[node name="ButtonAdventure" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
offset_right = 90.0
offset_bottom = 31.0
focus_neighbor_top = NodePath("../ButtonExit")
text = "Adventure"

[node name="ButtonChill" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
offset_top = 35.0
offset_right = 90.0
offset_bottom = 66.0
text = "Chill"

[node name="ButtonOptions" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
offset_top = 70.0
offset_right = 90.0
offset_bottom = 101.0
text = "Options"

[node name="ButtonExit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
offset_top = 105.0
offset_right = 90.0
offset_bottom = 136.0
focus_neighbor_bottom = NodePath("../ButtonAdventure")
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/ButtonAdventure" to="." method="_on_button_adventure_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonChill" to="." method="_on_button_chill_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
